// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - LN - Common - LinkCanonical At homepage Snapshot link canonical homepage 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonical At note Snapshot link canonical note 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/ciencia/roger-prueba-imagenes-nid28052020/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonical At sections Snapshot link canonical section 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/deportes/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonical At sub-sections Snapshot link canonical sub-section 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/deportes/futbol/boca-juniors/"
    rel="canonical"
  />
</div>
`;
